feat: change mixin for block element and add prettierignore file

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -14,14 +14,8 @@
   row-gap: $row-gap;
 }
 
-@mixin block(
-  $display: block,
-  $padding: 0,
-  $margin: 0,
-  $width: auto,
-  $height: auto
-) {
-  display: $display;
+@mixin block($padding: 0, $margin: 0, $width: auto, $height: auto) {
+  display: block;
   margin: $margin;
   padding: $padding;
   height: $height;
